# pytest-doctest-mkdocstrings

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: docs.yml  publish.yaml  verify.yml
docs/: API.md  index.md  usage.md
pytest_doctest_mkdocstrings/: doctest_mdcodeblocks.py  patch_doctest.py
test/: conftest.py  test_plugin.py
test/assets/: codeblocks.py  docs.md  test_patch.py
